<resources>
    <string name="app_name">Learning Square</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm PAssword</string>
    <string name="already_registered">Already registered?</string>
    <string name="security_question">Security Question</string>
    <string name="answer">answer</string>
    <string name="forget_password">Forget Password?</string>
    <string name="answer_to_security_question">Answer to security question</string>
    <string name="verify">Verify</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="send_reset_password_link">Send Reset Password Link</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="question_1">Question 1</string>
    <string name="answer_1">Answer 1</string>
    <string name="question_2">Question 2</string>
    <string name="answer_2">Answer 2</string>
    <string name="question_3">Question 3</string>
    <string name="questions">Questions</string>
    <string name="see_the_answer">Next</string>
    <string name="go_to_courses">Go to courses</string>
    <string name="hello">hello</string>

</resources>