<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo"></ImageView>

    /* This section is for Username*/
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"></EditText>

    /* This section is for Password*/
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"></EditText>

    /* This section is for confirm Password*/
    <EditText
        android:id="@+id/edittext_confirm_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"></EditText>



    /* This section is for email*/
    <EditText
        android:id="@+id/edittext_Email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"></EditText>

    /* This section is for Login*/
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:text="@string/register"></Button>

    /* This section is for register or not register box*/
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/already_registered">
        </TextView>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login">
        </TextView>
    </LinearLayout>

</LinearLayout>