<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
/* This section is for logo*/
<ImageView
    android:layout_width="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_height="150dp"
    app:srcCompat="@drawable/logo"></ImageView>

    /* This section is for Username*/
    <EditText
        android:id="@+id/edittext_Email1"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"></EditText>

    /* This section is for Password*/
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"></EditText>

    /* This section is for forget password*/
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/forget_password">
        </TextView>

        <TextView
            android:id="@+id/textview_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="Reset Password">
        </TextView>
    </LinearLayout>
    /* This section is for Login*/
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:text="@string/login"></Button>

    /* This section is for register or not register box*/
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/not_registered">
        </TextView>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/register">
        </TextView>


    </LinearLayout>



</LinearLayout>