<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".NewPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo"></ImageView>


    /* This section is for Password*/
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:hint="@string/password"></EditText>

    /* This section is for confirm Password*/
    <EditText
        android:id="@+id/edittext_confirm_Newpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"></EditText>

    /* This section is for Login*/
    <Button
        android:id="@+id/set_newPass_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:text="@string/reset"></Button>

</LinearLayout>